BAN: libban is now build into library dir

--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -2,12 +2,22 @@ cmake_minimum_required(VERSION 3.26)
 
 project(BAN CXX)
 
+set(BAN_SOURCES
+	BAN/New.cpp
+	BAN/String.cpp
+	BAN/StringView.cpp
+	BAN/Time.cpp
+)
+
 add_custom_target(ban-headers
 	COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/include ${BANAN_INCLUDE}
 	DEPENDS sysroot
 )
 
-add_custom_target(ban-install
-	DEPENDS ban-headers
-)
+add_library(ban ${BAN_SOURCES})
+add_dependencies(ban headers libc-install)
 
+add_custom_target(ban-install
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/libban.a ${BANAN_LIB}/
+	DEPENDS ban
+)
