Shell: we now link BAN (we can't use it though)

--- a/userspace/Shell/CMakeLists.txt
+++ b/userspace/Shell/CMakeLists.txt
@@ -8,9 +8,10 @@ set(SOURCES
 
 add_executable(Shell ${SOURCES})
 target_compile_options(Shell PUBLIC -O2 -g)
-add_dependencies(Shell libc-install)
+add_dependencies(Shell libc-install ban-install)
 target_link_options(Shell PUBLIC -nodefaultlibs)
 target_link_libraries(Shell PUBLIC ${BANAN_LIB}/libc.a)
+target_link_libraries(Shell PUBLIC ${BANAN_LIB}/libban.a)
 
 add_custom_target(Shell-install
 	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/Shell ${BANAN_BIN}/
