Kernel: Rename MMU to PageTable
This is more descriptive name for what it actually represents

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -68,7 +68,7 @@ if("${BANAN_ARCH}" STREQUAL "x86_64")
 		arch/x86_64/GDT.cpp
 		arch/x86_64/IDT.cpp
 		arch/x86_64/interrupts.S
-		arch/x86_64/MMU.cpp
+		arch/x86_64/PageTable.cpp
 		arch/x86_64/Thread.S
 	)
 elseif("${BANAN_ARCH}" STREQUAL "i386")
