--- a/userspace/test/CMakeLists.txt
+++ b/userspace/test/CMakeLists.txt
@@ -9,7 +9,8 @@ set(TEST_SOURCES
 add_executable(test ${TEST_SOURCES})
 target_compile_options(test PUBLIC -O2 -g)
 add_dependencies(test libc-install)
-target_link_options(test PUBLIC -nodefaultlibs -lc)
+target_link_options(test PUBLIC -nodefaultlibs)
+target_link_libraries(test PUBLIC ${BANAN_LIB}/libc.a)
 
 add_custom_target(test-install
 	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/test ${BANAN_BIN}/
