--- a/userspace/yes/CMakeLists.txt
+++ b/userspace/yes/CMakeLists.txt
@@ -8,8 +8,7 @@ set(SOURCES
 
 add_executable(yes ${SOURCES})
 target_compile_options(yes PUBLIC -O2 -g)
-add_dependencies(yes libc-install)
-target_link_options(yes PUBLIC -nodefaultlibs -lc)
+target_link_libraries(yes PUBLIC libc)
 
 add_custom_target(yes-install
 	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/yes ${BANAN_BIN}/
