--- a/userspace/Shell/CMakeLists.txt
+++ b/userspace/Shell/CMakeLists.txt
@@ -8,10 +8,7 @@ set(SOURCES
 
 add_executable(Shell ${SOURCES})
 target_compile_options(Shell PUBLIC -O2 -g)
-add_dependencies(Shell libc-install ban-install)
-target_link_options(Shell PUBLIC -nodefaultlibs)
-target_link_libraries(Shell PUBLIC ${BANAN_LIB}/libc.a)
-target_link_libraries(Shell PUBLIC ${BANAN_LIB}/libban.a)
+target_link_libraries(Shell PUBLIC libc ban)
 
 add_custom_target(Shell-install
 	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/Shell ${BANAN_BIN}/
