Kernel/LibC: Add basic pipe() syscall and command
You can now create pipes :)

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -20,6 +20,7 @@ set(KERNEL_SOURCES
 	kernel/Font.cpp
 	kernel/FS/Ext2.cpp
 	kernel/FS/Inode.cpp
+	kernel/FS/Pipe.cpp
 	kernel/FS/VirtualFileSystem.cpp
 	kernel/Input/PS2Controller.cpp
 	kernel/Input/PS2Keyboard.cpp
