--- a/libc/CMakeLists.txt
+++ b/libc/CMakeLists.txt
@@ -30,7 +30,7 @@ add_custom_target(libc-headers
 add_library(libc ${LIBC_SOURCES})
 add_dependencies(libc headers crt0)
 
-target_compile_options(libc PUBLIC -g -Wstack-usage=512)
+target_compile_options(libc PRIVATE -g -Wstack-usage=512)
 
 add_custom_target(libc-install
 	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/libc.a ${BANAN_LIB}/
