--- a/libc/CMakeLists.txt
+++ b/libc/CMakeLists.txt
@@ -23,8 +23,9 @@ set(LIBC_SOURCES
 )
 
 add_custom_target(libc-headers
-	COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/include ${BANAN_INCLUDE}
+	COMMAND sudo rsync -r ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
 	DEPENDS sysroot
+	USES_TERMINAL
 )
 
 add_library(libc ${LIBC_SOURCES})
@@ -33,9 +34,10 @@ add_dependencies(libc headers crt0)
 target_compile_options(libc PRIVATE -g -Wstack-usage=512)
 
 add_custom_target(libc-install
-	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/libc.a ${BANAN_LIB}/
+	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/libc.a ${BANAN_LIB}/
 	DEPENDS libc
 	BYPRODUCTS ${BANAN_LIB}/libc.a
+	USES_TERMINAL
 )
 
 set(CMAKE_STATIC_LIBRARY_PREFIX "")
