--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -26,7 +26,8 @@ add_custom_target(userspace)
 add_custom_target(userspace-install DEPENDS userspace)
 
 foreach(USERSPACE_PROJECT ${USERSPACE_PROJECTS})
-	target_compile_options(${USERSPACE_PROJECT} PUBLIC -g)
+	target_compile_options(${USERSPACE_PROJECT} PRIVATE -g)
+	add_dependencies(${USERSPACE_PROJECT} libc-install ban-install)
 	add_dependencies(userspace ${USERSPACE_PROJECT})
 	add_dependencies(userspace-install ${USERSPACE_PROJECT}-install)
 endforeach()
