--- a/userspace/cat/CMakeLists.txt
+++ b/userspace/cat/CMakeLists.txt
@@ -11,6 +11,7 @@ target_compile_options(cat PUBLIC -O2 -g)
 target_link_libraries(cat PUBLIC libc)
 
 add_custom_target(cat-install
-	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/cat ${BANAN_BIN}/
+	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/cat ${BANAN_BIN}/
 	DEPENDS cat
+	USES_TERMINAL
 )
