--- a/userspace/stat/CMakeLists.txt
+++ b/userspace/stat/CMakeLists.txt
@@ -11,6 +11,7 @@ target_compile_options(stat PUBLIC -O2 -g)
 target_link_libraries(stat PUBLIC libc ban)
 
 add_custom_target(stat-install
-	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/stat ${BANAN_BIN}/
+	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/stat ${BANAN_BIN}/
 	DEPENDS stat
+	USES_TERMINAL
 )
