--- a/userspace/yes/CMakeLists.txt
+++ b/userspace/yes/CMakeLists.txt
@@ -11,6 +11,7 @@ target_compile_options(yes PUBLIC -O2 -g)
 target_link_libraries(yes PUBLIC libc)
 
 add_custom_target(yes-install
-	COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/yes ${BANAN_BIN}/
+	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/yes ${BANAN_BIN}/
 	DEPENDS yes
+	USES_TERMINAL
 )
