BuildSystem: Add USES_TERMINAL when preparing sysroot
You were not able to enter sudo password on sysroot unpacking,
which caused ninja to hang

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ add_subdirectory(userspace)
 add_custom_target(sysroot
 	COMMAND mkdir -p ${BANAN_SYSROOT}
 	COMMAND cd ${BANAN_SYSROOT} && sudo tar xf ${BANAN_BASE_SYSROOT}
+	USES_TERMINAL
 )
 
 add_custom_target(headers
