--- a/libc/CMakeLists.txt
+++ b/libc/CMakeLists.txt
@@ -23,7 +23,7 @@ set(LIBC_SOURCES
 )
 
 add_custom_target(libc-headers
-	COMMAND sudo rsync -r ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
+	COMMAND sudo rsync -a ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
 	DEPENDS sysroot
 	USES_TERMINAL
 )
