--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -155,7 +155,7 @@ add_custom_command(
 )
 
 add_custom_target(kernel-headers
-	COMMAND sudo rsync -r ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
+	COMMAND sudo rsync -a ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
 	DEPENDS sysroot
 	USES_TERMINAL
 )
