Kernel: Rework whole Terminal structure
Serial monitors can now be used as a output. This requires editing
init code for the stdio opening. Serial input is not supported, so qemu
still needs graphical window for ps/2 keyboard.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -44,7 +44,6 @@ set(KERNEL_SOURCES
 	kernel/Process.cpp
 	kernel/Scheduler.cpp
 	kernel/Semaphore.cpp
-	kernel/Serial.cpp
 	kernel/SpinLock.cpp
 	kernel/SSP.cpp
 	kernel/Storage/ATABus.cpp
@@ -54,8 +53,10 @@ set(KERNEL_SOURCES
 	kernel/Storage/StorageDevice.cpp
 	kernel/Syscall.cpp
 	kernel/Syscall.S
+	kernel/Terminal/Serial.cpp
 	kernel/Terminal/TTY.cpp
 	kernel/Terminal/VesaTerminalDriver.cpp
+	kernel/Terminal/VirtualTTY.cpp
 	kernel/Thread.cpp
 	kernel/Timer/HPET.cpp
 	kernel/Timer/PIT.cpp
