Kernel: Add basic ZeroDevice to /dev/zero

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -16,6 +16,7 @@ set(KERNEL_SOURCES
 	kernel/Debug.cpp
 	kernel/Device/Device.cpp
 	kernel/Device/NullDevice.cpp
+	kernel/Device/ZeroDevice.cpp
 	kernel/Errors.cpp
 	kernel/Font.cpp
 	kernel/FS/DevFS/FileSystem.cpp
