1000th COMMIT: Kernel: Add basic E1000 driver
This driver is only capable to read mac address and enable and read
link status

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -38,6 +38,7 @@ set(KERNEL_SOURCES
 	kernel/Memory/kmalloc.cpp
 	kernel/Memory/PhysicalRange.cpp
 	kernel/Memory/VirtualRange.cpp
+	kernel/Networking/E1000.cpp
 	kernel/OpenFileDescriptorSet.cpp
 	kernel/Panic.cpp
 	kernel/PCI.cpp
