Kernel: Implement AHCI driver
SATA drives can now be used with banan-os. This allows much faster
disk access (writing 10 MiB from 30s to 1.5s). This can definitely
be optimized but the main slow down is probably the whole disk
structure in the os.

AHCI drive is now the default when running qemu.

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -53,6 +53,8 @@ set(KERNEL_SOURCES
 	kernel/Semaphore.cpp
 	kernel/SpinLock.cpp
 	kernel/SSP.cpp
+	kernel/Storage/ATA/AHCI/Controller.cpp
+	kernel/Storage/ATA/AHCI/Device.cpp
 	kernel/Storage/ATA/ATABus.cpp
 	kernel/Storage/ATA/ATAController.cpp
 	kernel/Storage/ATA/ATADevice.cpp
