--- a/toolchain/local/grub-legacy-boot.cfg
+++ b/toolchain/local/grub-legacy-boot.cfg
@@ -1,23 +1,23 @@
 menuentry "banan-os" {
-	multiboot /boot/banan-os.kernel root=/dev/sda2
+	multiboot2 /boot/banan-os.kernel root=/dev/sda2
 }
 
 menuentry "banan-os (no serial)" {
-	multiboot /boot/banan-os.kernel root=/dev/sda2 noserial
+	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noserial
 }
 
 menuentry "banan-os (only serial)" {
-	multiboot /boot/banan-os.kernel root=/dev/sda2 console=ttyS0
+	multiboot2 /boot/banan-os.kernel root=/dev/sda2 console=ttyS0
 }
 
 menuentry "banan-os (no apic)" {
-	multiboot /boot/banan-os.kernel root=/dev/sda2 noapic
+	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noapic
 }
 
 menuentry "banan-os (no apic, no serial)" {
-	multiboot /boot/banan-os.kernel root=/dev/sda2 noapic noserial
+	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noapic noserial
 }
 
 menuentry "banan-os (no apic, only serial)" {
-	multiboot /boot/banan-os.kernel root=/dev/sda2 noapic console=ttyS0
+	multiboot2 /boot/banan-os.kernel root=/dev/sda2 noapic console=ttyS0
 }
