--- a/userspace/cat-mmap/CMakeLists.txt
+++ b/userspace/cat-mmap/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(cat-mmap PUBLIC -O2 -g)
 target_link_libraries(cat-mmap PUBLIC libc)
 
 add_custom_target(cat-mmap-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/cat-mmap ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/cat-mmap ${BANAN_BIN}/
 	DEPENDS cat-mmap
-	USES_TERMINAL
 )
