--- a/userspace/chmod/CMakeLists.txt
+++ b/userspace/chmod/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(chmod PUBLIC -O2 -g)
 target_link_libraries(chmod PUBLIC libc)
 
 add_custom_target(chmod-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/chmod ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/chmod ${BANAN_BIN}/
 	DEPENDS chmod
-	USES_TERMINAL
 )
