--- a/userspace/mkdir/CMakeLists.txt
+++ b/userspace/mkdir/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(mkdir PUBLIC -O2 -g)
 target_link_libraries(mkdir PUBLIC libc)
 
 add_custom_target(mkdir-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/mkdir ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/mkdir ${BANAN_BIN}/
 	DEPENDS mkdir
-	USES_TERMINAL
 )
