--- a/userspace/mmap-shared-test/CMakeLists.txt
+++ b/userspace/mmap-shared-test/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(mmap-shared-test PUBLIC -O2 -g)
 target_link_libraries(mmap-shared-test PUBLIC libc)
 
 add_custom_target(mmap-shared-test-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/mmap-shared-test ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/mmap-shared-test ${BANAN_BIN}/
 	DEPENDS mmap-shared-test
-	USES_TERMINAL
 )
