--- a/userspace/snake/CMakeLists.txt
+++ b/userspace/snake/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(snake PUBLIC -O2 -g)
 target_link_libraries(snake PUBLIC libc)
 
 add_custom_target(snake-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/snake ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/snake ${BANAN_BIN}/
 	DEPENDS snake
-	USES_TERMINAL
 )
