--- a/BAN/CMakeLists.txt
+++ b/BAN/CMakeLists.txt
@@ -10,17 +10,15 @@ set(BAN_SOURCES
 )
 
 add_custom_target(ban-headers
-	COMMAND sudo rsync -a ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
+	COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/include/ ${BANAN_INCLUDE}/
 	DEPENDS sysroot
-	USES_TERMINAL
 )
 
 add_library(ban ${BAN_SOURCES})
 add_dependencies(ban headers libc-install)
 
 add_custom_target(ban-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/libban.a ${BANAN_LIB}/
+	COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/libban.a ${BANAN_LIB}/
 	DEPENDS ban
 	BYPRODUCTS ${BANAN_LIB}/libban.a
-	USES_TERMINAL
 )
