--- a/userspace/Shell/CMakeLists.txt
+++ b/userspace/Shell/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(Shell PUBLIC -O2 -g)
 target_link_libraries(Shell PUBLIC libc ban)
 
 add_custom_target(Shell-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/Shell ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/Shell ${BANAN_BIN}/
 	DEPENDS Shell
-	USES_TERMINAL
 )
