--- a/userspace/cp/CMakeLists.txt
+++ b/userspace/cp/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(cp PUBLIC -O2 -g)
 target_link_libraries(cp PUBLIC libc ban)
 
 add_custom_target(cp-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/cp ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/cp ${BANAN_BIN}/
 	DEPENDS cp
-	USES_TERMINAL
 )
