--- a/userspace/dd/CMakeLists.txt
+++ b/userspace/dd/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(dd PUBLIC -O2 -g)
 target_link_libraries(dd PUBLIC libc)
 
 add_custom_target(dd-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/dd ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/dd ${BANAN_BIN}/
 	DEPENDS dd
-	USES_TERMINAL
 )
