--- a/userspace/echo/CMakeLists.txt
+++ b/userspace/echo/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(echo PUBLIC -O2 -g)
 target_link_libraries(echo PUBLIC libc)
 
 add_custom_target(echo-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/echo ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/echo ${BANAN_BIN}/
 	DEPENDS echo
-	USES_TERMINAL
 )
