--- a/userspace/init/CMakeLists.txt
+++ b/userspace/init/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(init PUBLIC -O2 -g)
 target_link_libraries(init PUBLIC libc ban)
 
 add_custom_target(init-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/init ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/init ${BANAN_BIN}/
 	DEPENDS init
-	USES_TERMINAL
 )
