--- a/userspace/ls/CMakeLists.txt
+++ b/userspace/ls/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(ls PUBLIC -O2 -g)
 target_link_libraries(ls PUBLIC libc)
 
 add_custom_target(ls-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/ls ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/ls ${BANAN_BIN}/
 	DEPENDS ls
-	USES_TERMINAL
 )
