--- a/userspace/meminfo/CMakeLists.txt
+++ b/userspace/meminfo/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(meminfo PUBLIC -O2 -g)
 target_link_libraries(meminfo PUBLIC libc)
 
 add_custom_target(meminfo-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/meminfo ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/meminfo ${BANAN_BIN}/
 	DEPENDS meminfo
-	USES_TERMINAL
 )
