--- a/userspace/poweroff/CMakeLists.txt
+++ b/userspace/poweroff/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(poweroff PUBLIC -O2 -g)
 target_link_libraries(poweroff PUBLIC libc)
 
 add_custom_target(poweroff-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/poweroff ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/poweroff ${BANAN_BIN}/
 	DEPENDS poweroff
-	USES_TERMINAL
 )
