--- a/userspace/rm/CMakeLists.txt
+++ b/userspace/rm/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(rm PUBLIC -O2 -g)
 target_link_libraries(rm PUBLIC libc ban)
 
 add_custom_target(rm-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/rm ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/rm ${BANAN_BIN}/
 	DEPENDS rm
-	USES_TERMINAL
 )
