--- a/userspace/touch/CMakeLists.txt
+++ b/userspace/touch/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(touch PUBLIC -O2 -g)
 target_link_libraries(touch PUBLIC libc)
 
 add_custom_target(touch-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/touch ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/touch ${BANAN_BIN}/
 	DEPENDS touch
-	USES_TERMINAL
 )
