--- a/userspace/whoami/CMakeLists.txt
+++ b/userspace/whoami/CMakeLists.txt
@@ -11,7 +11,6 @@ target_compile_options(whoami PUBLIC -O2 -g)
 target_link_libraries(whoami PUBLIC libc ban)
 
 add_custom_target(whoami-install
-	COMMAND sudo cp ${CMAKE_CURRENT_BINARY_DIR}/whoami ${BANAN_BIN}/
+	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/whoami ${BANAN_BIN}/
 	DEPENDS whoami
-	USES_TERMINAL
 )
