--- a/bootloader/installer/CMakeLists.txt
+++ b/bootloader/installer/CMakeLists.txt
@@ -11,4 +11,7 @@ set(SOURCES
 )
 
 add_executable(x86_64-banan_os-bootloader-installer ${SOURCES})
-target_compile_options(x86_64-banan_os-bootloader-installer PUBLIC -O2 -std=c++20)
+target_compile_options(x86_64-banan_os-bootloader-installer PRIVATE -O2 -std=c++20)
+target_compile_definitions(x86_64-banan_os-bootloader-installer PRIVATE __arch=x86_64)
+target_include_directories(x86_64-banan_os-bootloader-installer PRIVATE ${CMAKE_SOURCE_DIR}/../../LibELF/include)
+target_include_directories(x86_64-banan_os-bootloader-installer PRIVATE ${CMAKE_SOURCE_DIR}/../../kernel/include)
