Kernel: Don't use multiboot2 explicitly. Parse it to common structure
This allows support of multiple different bootloaders

--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -12,6 +12,7 @@ set(KERNEL_SOURCES
 	font/prefs.psf.o
 	kernel/ACPI.cpp
 	kernel/APIC.cpp
+	kernel/BootInfo.cpp
 	kernel/CPUID.cpp
 	kernel/Debug.cpp
 	kernel/Device/Device.cpp
